--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
 </head>
 <body>
     
+    <form id="form" style="display: flex; flex-direction: column;">
+        <label for="nome">Nome do Produto</label>
+        <input type="text" id="nome">
+
+        <label for="valor">Preço</label>
+        <input type="number" id="valor">
+
+        <label for="categoria">Categoria</label>
+        <select id="categoria">
+            <option value="Alimentos">Alimentos</option>
+            <option value="Tecnologia">Tecnologia</option>
+            <option value="Decoração">Decoração</option>
+        </select>
+
+        <button id="btnCadastrar" type="submit">Cadastrar produto</button>
+
+        <div id="mensagemErro"></div>
+    </form>
+
+    <div>
+        <h3>Produtos</h3>
+        <ul id="listaProdutos"></ul>
+    </div>
+
+
 </body>
 <script src="app.js"></script>
 </html>
